# ZeroMessage

./: CMakeLists.txt  README.md  main_client.cpp  server.cpp
Guides/: assembly_to_cpp.txt  socket.txt  socket_ip
InternetStatus/: CMakeLists.txt  README.md  internet_connection_checker.cpp
src/: main_client.cpp  server.cpp
